full draft of all pages

--- a/index.Rmd
+++ b/index.Rmd
@@ -43,7 +43,7 @@ Both R and Python can easily interact with an SQLite database. For R you'll need
 
 To replicate the (non-essential) PostgreSQL administration portion of this tutorial, you'll need access to a machine on which you can run a PostgreSQL server. While there are a variety of ways to do this, this tutorial assumes that you are running PostgreSQL on an Ubuntu (or Debian) Linux machine. If you are a Windows or Mac user, there are several options for accessing a Linux environment:
 
-- You could run Ubuntu in a Docker container; Docker can be installed on Windows or Mac. Once you've installed Docker and have access to a terminal command line, please see the commands in `docker.sh` in this repository. 
+- You could run Ubuntu in a Docker container; Docker can be installed on Windows or Mac. Once you've installed Docker and have access to a terminal command line, please see the commands in [docker.sh](docker.sh) in this repository. 
 - You could run an Amazon EC2/Google Cloud/Azure virtual machine instance, using a image that supports R and/or Python and then installing PostgreSQL as discussed in this tutorial.
 - The big cloud computing providers have created a wide array of specific database services, so if you are using a cloud provider, you'd probably want to take advantage of those rather than 'manually' running a database via a virtual machine. 
 
@@ -70,9 +70,9 @@ On a computer there is a hierarchy of locations where data can be stored. The hi
 
 For our purposes here the key question is whether the data resides in memory or on disk, but when considering Spark and distributed systems, one gets into issues of moving data across the network between machines. 
 
-Formally, databases are stored on disk, while R and Python store datasets in memory. This would suggest that databases will be slow to access their data but will be able to store more data than can be loaded into an R or Python session. However, databases can be quite fast due in part to disk caching by the operating system as well as careful implementation of good algorithms for database operations. For more information about disk caching see Section 2.6.5.
+Formally, databases are stored on disk, while R and Python store datasets in memory. This would suggest that databases will be slow to access their data but will be able to store more data than can be loaded into an R or Python session. However, databases can be quite fast due in part to disk caching by the operating system as well as careful implementation of good algorithms for database operations. For more information about disk caching see [the database management document](db-management).
 
-And conversely, R (and probably Python) have mechanisms for storing large datasets on disk in a way that they can be accessed fairly quickly.
+And conversely, R and Python have mechanisms for storing large datasets on disk in a way that they can be accessed fairly quickly.
 
 # 3 Database systems and SQL
 
@@ -116,11 +116,11 @@ Some NoSQL systems include
 
 SQL is a declarative language that tells the database system what results you want. The system then parses the SQL syntax and determines how to implement the query.
 
-Later we'll introduce a database of Stack Overflow questions and answers. The *questions* table has a field *viewcount* that indicates how many times each question was viewed. 
+Later we'll introduce a database of Stack Overflow questions and answers. 
 
 Here is a simple query that selects the first five rows (and all columns, based on the `*` wildcard) from a table (called 'questions') in a database that one has connected to:
 
-```
+```sql
 select * from questions limit 5
 ```
 
@@ -275,7 +275,7 @@ Although DBMS have their own interfaces (we'll see a bit of this later), databas
 
 Most of our examples of making SQL queries on a database will be done from R, but they could just as easily have been done from Python or other programs.
 
-# 6.1 Using SQL from R
+## 6.1 Using SQL from R
 
 The *DBI* package provides a front-end for manipulating databases from a variety of DBMS (SQLite, MySQL, PostgreSQL, among others).
 Basically, you tell the package what DBMS is being used on the back-end, link to the actual database, and then you can use the standard functions in the package regardless of the back-end.
@@ -290,7 +290,8 @@ drv <- dbDriver("SQLite")
 dir <- 'data' # relative or absolute path to where the .db file is
 dbFilename <- 'stackoverflow-2016.db'
 db <- dbConnect(drv, dbname = file.path(dir, dbFilename))
-dbGetQuery(db, "select * from questions limit 5")  # simple query to get 5 rows from a table
+# simple query to get 5 rows from a table
+dbGetQuery(db, "select * from questions limit 5")  
 ```
 
 We can easily see the tables and their fields:
@@ -326,11 +327,13 @@ To access a PostgreSQL database instead, you can do the following, assuming the 
 library(RPostgreSQL)
 drv <- dbDriver("PostgreSQL")
 db <- dbConnect(drv, dbname = 'stackoverflow', user = 'paciorek', password = 'test')
+# simple query to get 5 rows from a table, same as with SQLite:
+dbGetQuery(db, "select * from questions limit 5")  
 ```
 
 Apart from the different manner of connecting, all of the queries above are the same regardless of whether the back-end DBMS is SQLite, PostgreSQL, etc.
 
-# 6.2 Using SQL from Python
+## 6.2 Using SQL from Python
 
 For SQLite:
 
@@ -346,7 +349,7 @@ results = c.fetchall() # retrieve results
 ```
 
 To disconnect:
-```
+```{python, eval=FALSE}
 c.close()
 ```
 
