--- a/sql.Rmd
+++ b/sql.Rmd
@@ -21,7 +21,7 @@ Here is a simple query that selects the first five rows (and all columns, based 
 select * from questions limit 5
 ```
 
-To run this from R:
+To run this from R we provide the SQL syntax as a string as the second argument to `dbGetQuery`.
 
 ```{r, start, eval=TRUE}
 library(RSQLite)
@@ -29,25 +29,30 @@ drv <- dbDriver("SQLite")
 dir <- 'data' # relative or absolute path to where the .db file is
 dbFilename <- 'stackoverflow-2016.db'
 db <- dbConnect(drv, dbname = file.path(dir, dbFilename))
-dbGetQuery(db, "select * from questions limit 5")  # simple query to get 5 rows from a table
+dbGetQuery(db, "select * from questions limit 5")
 ```
 
 Now let's see some more interesting usage of other SQL syntax.
 
-```
+First we get the questions that are viewed the most by filtering to the rows for which the 'viewcount' is greater than 100000. We'll limit the results to the first 5 rows so we don't print too much out.
+
+```{r, eval=TRUE}
 ## get the questions that are viewed the most
-select * from questions where viewcount > 100000
-## find the largest numbers of question views in the questions table
-select distinct viewcount from questions order by viewcount desc limit 20
+dbGetQuery(db, "select * from questions where viewcount > 100000 limit 10")
 ```
 
-Let's lay out the various verbs in SQL. Here's the form of a standard query (though the ORDER BY is often not used and sorting is computationally expensive):
+Next, let's find the number of views for the 15 questions viewed the most.
+```{r, eval=TRUE}
+dbGetQuery(db, "select distinct viewcount from questions order by viewcount desc limit 20")
+```
+
+Let's lay out the various verbs in SQL. Here's the form of a standard query (but note that the sorting done by ORDER BY is computationally expensive and would be used sparingly):
 
 ```
 SELECT <column(s)> FROM <table> WHERE <condition(s) on column(s)> ORDER BY <column(s)>
 ```
 
-SQL keywords are often written in ALL CAPITALS though I won't necessarily do that in this tutorial. 
+SQL keywords are often written in ALL CAPITALS by convention, although I won't necessarily do that in this tutorial. 
 
 And here is a table of some important keywords:
 
@@ -57,16 +62,14 @@ And here is a table of some important keywords:
 | SELECT                  | select columns 
 | FROM                    | which table to operate on
 | WHERE                   | filter (choose) rows satisfying certain conditions
-| LIKE, IN, <, >, =, etc.    | used as part of conditions
+| LIKE, IN, <, >, =, <=, >=, !=, etc.    | used as part of filtering conditions
 | ORDER BY                | sort based on columns
 
-For comparisons in a WHERE clause, some common syntax for setting conditions includes LIKE (for patterns), =, >, <, >=, <=, !=.
-
-Some other keywords are: DISTINCT, ON, JOIN, GROUP BY, AS, USING, UNION, INTERSECT, HAVING, SIMILAR TO, SUBSTR in SQLite and SUBSTRING in PostgreSQL. 
+Some other keywords are: DISTINCT, ON, JOIN, GROUP BY, AS, USING, UNION, INTERSECT, HAVING, SIMILAR TO (not available in SQLite), SUBSTR in SQLite and SUBSTRING in PostgreSQL. 
 
 > **Challenge**: Return a few rows from the users, questions, answers, and tags tables so you can get a sense for what the entries in the tables are like.
 
-> **Challenge**: Find the youngest users in the database.
+> **Challenge**: Find the oldest users in the database.
 
 ## 1.2 Getting unique results (DISTINCT)
 
@@ -74,13 +77,15 @@ A useful SQL keyword is DISTINCT, which allows you to eliminate duplicate rows f
 
 
 ```{r, eval=TRUE}
+## Find the unique tags:
 tagNames <- dbGetQuery(db, "select distinct tag from questions_tags")
+## Count the number of unique tags:
 dbGetQuery(db, "select count(distinct tag) from questions_tags")
 ```
 
 ## 1.3 Grouping / stratifying (GROUP BY)
 
-A common pattern of operation is to stratify the dataset, i.e., collect it into mutually exclusive and exhaustive subsets. One would then generally do some aggregation operation on each subset. In SQL this is done with the GROUP BY keyword.
+A common pattern of operation is to stratify the dataset, i.e., collect it into mutually exclusive and exhaustive subsets. One would then generally do some aggregation operation on each subset. The aggregation is always done within each of the groups. In SQL this is done with the GROUP BY keyword.
 
 Here's a basic example where we count the occurrences of different tags. 
 
@@ -88,6 +93,8 @@ Here's a basic example where we count the occurrences of different tags.
 dbGetQuery(db, "select tag, count(*) as n from questions_tags
                 group by tag order by n desc limit 100")
 ```
+
+Also note the use of `as` to define a name for the new column.
 
 > **Challenge**: What specifically does that query do? Describe the table that would be returned.
 
@@ -97,7 +104,7 @@ The result of a query that uses `group by` is a table with as many rows as group
 
 > **Warning**: To filter the result of a grouping operation, we need to use `having` rather than `where`.
 
-Also note the use of `as` to define a name for the new column.
+
 
 
 ```{r}
@@ -105,14 +112,14 @@ dbGetQuery(db, "select tag, count(*) as n from questions_tags
                 group by tag having n > 100000 limit 10")
 ```
 
-> **Challenge**: Write a query that will count the number of answers for each question, returning the most answered questions. 
+> **Challenge**: Write a query that will count the number of answers for each question, returning the IDs of the most answered questions. Hint: consider which field in the "answers" table we do the grouping on (and you shouldn't need to use the "questions" table. 
 
 
 ## 1.4 Joins
 
 ### 1.4.1 Introduction to joins
 
-Suppose in the example of students in classes, we want a result that has the grades of all students in 9th grade. For this we need information from the Student table (to determine grade level) and information from the ClassAssignment table (to determine the class grade). Getting information from multiple tables, where a row in one table is matched with one or more rows in another table is called a *join*. 
+Suppose in the example of students in classes, we want a result that has the grades of all students in 9th grade. For this we need information from the Student table (to determine grade level) and information from the ClassAssignment table (to determine the class grade for each class a student takes). Getting information from multiple tables, where a row in one table is matched with one or more rows in another table is called a *join*. In this case the join would look for all rows in the ClassAssignment table that match a given row (i.e., student) in the Student table, using the column in each of the tables containing the student ID to do the matching of rows.
 
 The syntax generally looks like this (again the WHERE and ORDER BY are optional):
 
@@ -121,47 +128,49 @@ SELECT <column(s)> FROM <table1> JOIN <table2> ON <columns to match on>
    WHERE <condition(s) on column(s)> ORDER BY <column(s)>
 ```
 
-Let's see some joins using the different syntax on the Stack Overflow database. In particular let's select only the questions with the tag "python".
+Let's see an example join on the Stack Overflow database. In particular let's select only the questions with the tag "python".
 
 
 ```{r, eval=SLOWEVAL}
-## a join with JOIN
 result1 <- dbGetQuery(db, "select * from questions join questions_tags 
            on questions.questionid = questions_tags.questionid where tag = 'python'")
+head(result1)           
+```
 
-## a join without JOIN
+It's also possible to get the same exact result without using the JOIN keyword, but you'll need the WHERE keyword to ensure that the rows get matched correctly.
+
+```{r, eval=SLOWEVAL}
 result2 <- dbGetQuery(db, "select * from questions, questions_tags
         where questions.questionid = questions_tags.questionid and tag = 'python'")
-head(result2)
+
 
 identical(result1, result2)
 ```
 
-As seen above, you can do the join with using the *join* keyword, but if you do, you need to use *where*. More on this in a bit.
+We'll explain what is going on in the next section.
 
-Here's a three-way join with some additional use of aliases to abbreviate table names. What does this query ask for?
+Here's a three-way join (both with and without the JOIN keyword) with some additional use of *aliases* to abbreviate table names. What does this query ask for?
 
 ```{r, eval=SLOWEVAL}
 result1 <- dbGetQuery(db, "select * from questions Q
         join questions_tags T on Q.questionid = T.questionid
         join users U on Q.ownerid = U.userid
-        where tag = 'python' and age < 18")
+        where tag = 'python' and age > 70")
 
 result2 <- dbGetQuery(db, "select * from questions Q, questions_tags T, users U
         where Q.questionid = T.questionid 
           and Q.ownerid = U.userid
           and tag = 'python' 
-          and age < 18")
+          and age > 70")
 
 identical(result1, result2)
 ```
 
-> **Challenge**: Write a query that would return all the questions with the Python tag.
-
 > **Challenge**: Write a query that would return all the answers to questions with the Python tag.
 
-> **Challenge**: Write a query that would return the users who have answered a question with the Python tag.
+> **Challenge**: Write a query that will count the number of answers for each question, returning the most answered questions and their information. Note that this extends the question in the previous section.
 
+> **Challenge**: Write a query that would return the users who have answered a question with the Python tag.
 
 
 ### 1.4.2 Types of joins
@@ -180,10 +189,10 @@ Here's a table of the different kinds of joins:
 |  Type of join          |   Rows from first table  | Rows from second table
 |------------------------|--------------------------|---------------------------------------------
 | inner (default)       |   all that match on specified condition        | all that match on specified condition
-| left outer             |   all                    | all that match first
-| right outer            |   all that match second | all 
+| left outer             |   all                    | all that match first table
+| right outer            |   all that match second table | all 
 | full outer             |   all                    | all
-| cross                  |   all combined pairwise with second | all combined pairwise with first
+| cross                  |   all combined pairwise with second table | all combined pairwise with first table
 
 A 'natural' join is an inner join that doesn't require you to specify the common columns between tables on which to enforce equality, but it's often good practice to not use a natural join and to explicitly indicate which columns are being matched on.
 
@@ -208,7 +217,7 @@ Note that in the last query the join would be based on all common columns, which
 > **Challenge**: How many questions tagged with 'random-forest' were unanswered? (You should need two different kinds of joins to answer this.)
 
 
-### 1.4.3 Joining a table with itself (self joins)
+### 1.4.3 Joining a table with itself (self join)
 
 Sometimes we want to query information across rows of the same table. For example supposed we want to analyze the time lags between when the same person posts a question. Do people tend to post in bursts or do they tend to post uniformly over the year? To do this we need contrasts between the times of the different posts. (One can also address this using window functions, discussed later.)
 
@@ -217,12 +226,11 @@ So we need to join two copies of the same table, which means dealing with resolv
 This would look like this:
 
 ```{r}
-dbGetQuery(db, "create view question_contrasts as
-               select * from questions Q1 join questions Q2
+dbGetQuery(db, "select * from questions Q1 join questions Q2
                on Q1.ownerid = Q2.ownerid")
 ```
 
-That should create a new table (actually a view) with all pairs of questions asked by a single person.
+That should create a new table with all pairs of questions asked by a single person.
 
 Actually, there's a problem here.
 
@@ -248,37 +256,40 @@ Suppose we always want the age and displayname of question owners available. Onc
 
 ```{r, eval=FALSE}
 ## note there is a creationdate in users too, hence disambiguation
-dbExecute(db, "create view questionsAugment as
-               select questionid, questions.creationdate, score, viewcount, title, ownerid, age, displayname
+dbExecute(db, "create view questions_plus as
+               select questionid, questions.creationdate, score, viewcount, 
+                      title, ownerid, age, displayname
                from questions join users on questions.ownerid = users.userid")
 ## don't be confused by the "0" response --
 ## it just means that nothing is returned to R; the view _has_ been created
                
-dbGetQuery(db, "select * from questionsAugment where age < 15 limit 5")
+dbGetQuery(db, "select * from questions_plus where age > 70 limit 5")
 ```
                
 One use of a view would be to create a mega table that stores all the information from multiple tables in the (unnormalized) form you might have if you simply had one data frame in R or Python.
 
 ```{r, eval=FALSE, include=TRUE}
-dbExecute(db, "drop view questionsAugment") # drop so can create again when rerun the code above
+dbExecute(db, "drop view questions_plus") # drop the view if we no longer need it
 ```
 
 # 2 Additional SQL topics
 
 ## 2.1 Creating database tables
 
-One can create tables from within the `sqlite` and `psql` command line interfaces (discussed later), but often one would do this from R or Python. Here's the syntax from R.
+Often one would create tables from within R or Python (though one can [create tables from within the `sqlite` and `psql` command line interfaces](db-management) as well). Here's the syntax from R.
 
 ```{r}
 ## Option 1: pass directly from CSV to database
-dbWriteTable(conn = db, name = "student", value = "student.csv", row.names = FALSE, header = TRUE)
+dbWriteTable(conn = db, name = "student", value = "student.csv", row.names = FALSE,
+                  header = TRUE)
 
 ## Option 2: pass from data in an R data frame
 ## First create your data frame:
-# student <- data.frame(...)
+# student_df <- data.frame(...)
 ## or
-# student <- read.csv(...)
-dbWriteTable(conn = db, name = "student", value = student, row.names = FALSE, append = FALSE)
+# student_df <- read.csv(...)
+dbWriteTable(conn = db, name = "student", value = student_df, row.names = FALSE,
+                  append = FALSE)
 ```
 
 ## 2.2 String processing and creating new fields
@@ -289,9 +300,9 @@ We can do some basic matching with LIKE, using % as a wildcard and _ to stand in
 dbGetQuery(db, "select * from questions_tags where tag like 'r-%' limit 10")
 ```
 
-In Postgres, in addition to the basic use of LIKE to match character strings, one can use regular expression syntax with SIMILAR TO and one can extract substrings with SUBSTRING.
+In Postgres, in addition to the basic use of LIKE to match character strings, one can use regular expression syntax with SIMILAR TO.
 
-These keywords are not available in SQLite so the following can only be done in the Postgres instance of our example database. Here we'll look for all tags that are of the form "r-", "-r", "r" or "-r-". SQL uses % as a wildcard (this is not standard regular expression syntax). 
+SIMILAR TO is not available in SQLite so the following can only be done in the Postgres instance of our example database. Here we'll look for all tags that are of the form "r-", "-r", "r" or "-r-". SQL uses % as a wildcard (this is not standard regular expression syntax). 
 
 
 ```{r, eval=FALSE}
@@ -301,16 +312,16 @@ result <- dbGetQuery(db, "select * from questions_tags where tag SIMILAR TO 'r-%
 ## result <- dbGetQuery(db, "select * from questions_tags where tag SIMILAR TO 'r-.*|.*-r|r|.*-r-.*' limit 10")
 ```
 
-Note that the matching does not find subsets, unless one uses wildcards at beginning and end of the pattern, so "r" will only find "r" and not, for example, "dyplr".
+> **Note**: The matching does not match on substrins, unless one uses wildcards at beginning and end of the pattern, so "r" will only find "r" and not, for example, "dplyr".
 
-To extract substrings we use SUBSTRING. Postgres requires that the pattern to be extracted be surrounded by `#"` (one could use another character in place of `#`), but for use from R we need to escape the double-quote with a backslash so it is treated as a part of the string passed to Postgres and not treated by R as indicating where the character string stops/starts. 
+To extract substrings we can SUBSTRING in Postgres. Postgres requires that the pattern to be extracted be surrounded by `#"` (one could use another character in place of `#`), but for use from R we need to escape the double-quote with a backslash so it is treated as a part of the string passed to Postgres and not treated by R as indicating where the character string stops/starts. 
 
 ```{r}
 dbGetQuery(db, "select substring(creationdate from '#\"[[:digit:]]{4}#\"%' for '#') as year
                from questions limit 3")
 ```
 
-Note that SQLite provides SUBSTR for substrings, but the flexibility of SUBSTR seems to be much less than use of SUBSTRING in PostgreSQL.
+> **Warning**: SQLite provides SUBSTR for substrings, but the flexibility of SUBSTR seems to be much less than use of SUBSTRING in PostgreSQL.
 
 Here is some [documentation on string functions in PostgreSQL](https://www.postgresql.org/docs/current/functions-string.html).
 
