--- a/sql.Rmd
+++ b/sql.Rmd
@@ -459,9 +459,9 @@ We can use subqueries in the FROM statement to create a temporary table to use i
 
 ```{r, eval=FALSE}
 dbGetQuery(db, "select * from questions join answers A on questions.questionid = A.questionid
-                join 
-	        (select ownerid, count(*) as n_answered from answers 
-	        group by ownerid order by n_answered desc limit 1000) most_responsive on
+                join
+                (select ownerid, count(*) as n_answered from answers
+                group by ownerid order by n_answered desc limit 1000) most_responsive on
                 A.ownerid = most_responsive.ownerid")
 ```
 
@@ -665,11 +665,19 @@ system.time(dbGetQuery(db, "select * from questions where viewcount > 10000"))  
 system.time(dbExecute(db, "drop index count_index"))
 ```
 
-In other contexts, an index can save huge amounts of time. So if you're working with a database and speed is important, check to see if there are indexes.
+In many contexts (but not the examle above), an index can save huge amounts of time. So if you're working with a database and speed is important, check to see if there are indexes.
 
-That being said, using indexes in a lookup is not always advantageous.
+One downside of indexes is that creation of indexes can be very time-consuming, as seen above). And if the database is updated frequently, this could be detrimental. 
 
-### How indexes work
+Finally, using indexes in a lookup is not always advantageous, as discussed next.
+
+### 4.2.1 Index lookup vs. sequential scan 
+
+Using an index is good in that can go to the data needed very quickly based on random access to the disk locations of the data of interest, but if it requires the computer to examine a large number of rows, it may not be better than sequential scan. An advantage of sequential scan is that it will make good use of the CPU cache, reading chunks of data and then accessing the individual pieces of data quickly. 
+
+Ideally you'd do sequential scan of exactly the subset of the rows that you need, with that subset available in contiguous storage. 
+
+### 4.2.2 How indexes work
 
 Indexes are often implemented using tree-based methods. For example in Postgres, b-tree indexes are used for indexes on things that have an ordering. Trees are basically like decision trees - at each node in the tree, there is a condition that sends one down the left or right branch (there might also be more than two branches. Eventually, one reaches the leaves of the tree, which have the actual values that one is looking for. Associated with each value is the address of where that row of data is stored. With a tree-based index, the time cost of b-tree lookup is logarithmic (based on the binary lookup), so it does grow with the number of elements in the table, but it does so slowly. The lookup process is that given a value (which would often be referred to as a `key`), one walks down the tree based on comparing the value to the condition at each split in the tree until one finds the elements corresponding to the value and then getting the addresses for where the desired rows are stored. 
 
@@ -677,7 +685,8 @@ Here's [some information](https://use-the-index-luke.com/sql/anatomy/the-tree) o
 
 In SQLite, indexes are implemented by creating a separate index table that maps from the value to the row index in the indexed table, allowing for fast lookup of a row. 
 
-One downside of indexes is that creation of indexes can be very time-consuming. And if the database is updated frequently, this could be detrimental. 
+
+
 
 
 ## 4.3 SQL query plans and EXPLAIN
@@ -777,21 +786,14 @@ dbGetQuery(db, "explain select * from questions cross join questions_tags where
 We see that the query plan indicates the two queries are using the same steps, with the same cost.
 
 
-## 4.4 Index lookup vs. sequential scan 
-
-Using an index is good in that can go to the data needed very quickly based on random access to the disk locations of the data of interest, but if it requires the computer to examine a large number of rows, it may not be better than sequential scan. An advantage of sequential scan is that it will make good use of the CPU cache, reading chunks of data and then accessing the individual pieces of data quickly. 
-
-Ideally you'd do sequential scan of exactly the subset of the rows that you need, with that subset available in contiguous storage. 
-
-
-## 4.5 Disk caching 
+## 4.4 Disk caching 
 
 You might think that database queries will generally be slow (and slower than in-memory manipulation such as in R or Python when all the data can fit in memory) because the database stores the data on disk. However, as mentioned earlier the operating system will generally cache files/data in memory when it reads from disk. Then if that information is still in memory the next time it is needed, it will be much faster to access it the second time around. Other processes might need memory and 'invalidate' the cache, but often once the data is read once, the database will be able to do queries quite quickly. This also means that even if you're using a database, you can benefit from a machine with a lot of memory if you have a large database (ideally a machine with rather more RAM than the size of the table(s) you'll be accessing). 
 
 Given this, it generally won't be helpful to force your database to reside in memory (e.g., using `:memory:` for SQLite or putting the database on a RAM disk). 
 
 
-## 4.6 Parallelization and partitioning
+## 4.5 Parallelization and partitioning
 
 To speed up your work, one might try to split up one's queries into multiple queries that you run in parallel. However, you're likely to have problems with parallel queries from a single R or Python session.
 
